--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lduwcs.dictionary">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,10 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Dictionary">
+        <activity android:name=".YourWordActivity"></activity>
         <activity
-            android:theme="@style/Theme.Dictionary.NoActionBar"
-            android:name=".DefinitionActivity">
-        </activity>
+            android:name=".DefinitionActivity"
+            android:theme="@style/Theme.Dictionary.NoActionBar"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -26,6 +26,5 @@
             </intent-filter>
         </activity>
     </application>
-
 
 </manifest>
